--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -1,9 +1,11 @@
 .educations-container-dark {
-    background-image: linear-gradient(180deg, #fff0e5 100%, #edf6fc 0%);
+    // background-image: linear-gradient(180deg, #fff0e5 100%, #edf6fc 0%);
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 1) -10.7%, rgba(0, 0, 0, 1) 88.8%);
 }
 
 .educations-container-gradient-dark {
-    background-image: linear-gradient(180deg, #ffeede -20%, white 75%) !important;
+    // background-image: linear-gradient(180deg, #ffeede -20%, white 75%) !important;
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 1) -10.7%, rgba(53, 92, 125, 1) 88.8%);
 }
 
 .educations-container-light {
